AWS Terraform Project.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.0"
    }
  }
}

# Configure the AWS Provider
provider "aws" {
  region = "us-east-1"
  shared_credentials_files = ["~/.aws/credentials"]
  profile                  = "vscode"
}

#Create a keypair first in AWS
# 1. Create vpc
resource "aws_vpc" "prod-vpc" {
  cidr_block       = "10.0.0.0/16"
  tags = {
    Name = "production"
  }
}
# 2. Create Internet Gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod-vpc.id
}
# 3. Create Custom Route Table
resource "aws_route_table" "prod-route-table" {
  vpc_id = aws_vpc.prod-vpc.id

  route {
    cidr_block = "0.0.0.0/0" #default route (0.0.0.0/0) that sends all IPV4 traffic to the internet gateway
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block        = "::/0" #IPV6 default route sends traffic from the created subnet to the internet
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "Prod"
  }
}
# 4. Create Subnet where webserver is going to reside on
resource "aws_subnet" "subnet-1" {
  vpc_id     = aws_vpc.prod-vpc.id
  cidr_block = "10.0.1.0/24"
availability_zone =  "us-east-1a"

tags = {
    Name = "prod-subnet"
  }
}
# 5. Associate Subnet with route table
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet-1.id
  route_table_id = aws_route_table.prod-route-table.id
}
# 6. Create Security Group to allow port 22, 80, 443

resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow web traffic"
  vpc_id      = aws_vpc.prod-vpc.id

  ingress {
    description      = "HTTPS"
    from_port        = 443 #alllows from port 443 to 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"] #0.0.0/0 means that any IP address can access it.
  }

ingress {
    description      = "HTTP"
    from_port        = 80 #alllows from port 443 to 443
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"] #0.0.0/0 means that any IP address can access it.
  }

  ingress {
    description      = "SSH"
    from_port        = 22 #alllows from port 443 to 443
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"] #0.0.0/0 means that any IP address can access it.
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1" #any protocol
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_web"
  }
}
# 7. Create network interface with an ip in the subnet that was created in step 4 (creates private IP for the host)
resource "aws_network_interface" "web-server-nic" {
  subnet_id       = aws_subnet.subnet-1.id
  private_ips     = ["10.0.1.50"] #pick an IP within subnet IP above
  security_groups = [aws_security_group.allow_web.id]
}
# 8. Assign an elastic IP to the network interface created in step 7 (creates IP public address)
resource "aws_eip" "one" {
  vpc                       = true
  network_interface         =  aws_network_interface.web-server-nic.id
  associate_with_private_ip = "10.0.1.50" # associate with private IP above
depends_on = [aws_internet_gateway.gw]
}

  
#9. Create Ubuntu server and install/enable apache2   ami-007855ac798b5175e
resource "aws_instance" "web-server-instance" {
ami           = "ami-053b0d53c279acc90"
instance_type = "t2.micro"
availability_zone = "us-east-1a"
key_name = "main-key"

network_interface {
    device_index = 0 #fist network interface associated with the device
    network_interface_id = aws_network_interface.web-server-nic.id
    }
    user_data = <<-EOF
                #!/bin/bash
                sudo apt update -y
                sudo apt install apache2 -y
                sudo systemctl start apache2
                sudo bash -c 'echo your very first web server > /var/www/html/index.html'
                EOF

              tags = {
                name = "web-server"
              }  
 }
